# try_dll

./: .gitignore  CMakeLists.txt  README.md  code.txt  main.cpp  some_matrix.txt
conan/windows/: conanfile.txt
